Review and update FAQ content
Remove outdated FAQs (4, 5, 6), update remaining entries with
current links, versions, and examples, add new FAQ about empty
`beans.xml` discovery mode change in CDI 4.0.